--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
 
     <footer class="footer text-center">
         <div class="container">
-            <span>NPET © 2025 | Panacea Smart Solutions | Developed by Saqib Sherwani</span>
+            <span>NPET © 2025 | Panacea Smart Solutions | Developed by Saqib Sherwani | Copyright © 2025. All rights reserved.</span>
         </div>
     </footer>
 
